/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package magma.orc8r.metricsd;

import "metrics.proto";

option go_package = "protos";

// MetricsExporter supports custom metric datasinks.
service MetricsExporter {
  // Submit metrics to datasinks.
  rpc Submit(SubmitMetricsRequest) returns (SubmitMetricsResponse) {}
}

message SubmitMetricsRequest {
  repeated io.prometheus.client.MetricFamily metrics = 1;
  // context provides information to the exporter about a metric's origin.
  oneof context {
    CloudContext cloudContext = 2;
    GatewayContext gatewayContext= 3;
    PushedContext pushedContext = 4;
  }
}

message SubmitMetricsResponse {}

// CloudContext contains context for metrics scraped from cloud services.
message CloudContext {
  string cloud_host = 1;
}

// GatewayContext contains context for metrics submitted from gateways.
message GatewayContext {
  string network_id = 1;
  string gateway_id = 2;
}

// PushedContext contains context for metrics pushed via the REST API.
message PushedContext {
  string network_id = 1;
}

